Adaugare Roluri de la utilizator la Admin

--- a/eUseControl.BeekeepingStore/Views/Account/Profile.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Account/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model eUseControl.BeekeepingStore.BusinessLogic.Interfaces.UProfileData
+﻿@model eUseControl.BeekeepingStore.Domain.Entities.User.UProfileData
 
 @{
     ViewBag.Title = "Profilul meu";
