--- a/eUseControl.BeekeepingStore/Views/AdminDashboard/Products.cshtml
+++ b/eUseControl.BeekeepingStore/Views/AdminDashboard/Products.cshtml
@@ -87,7 +87,7 @@
                                                 </button>
                                                 <ul class="dropdown-menu dropdown-menu-end">
                                                     <li>
-                                                        <a class="dropdown-item" href="@Url.Action("Details", "Product", new { id = product.ProductId })">
+                                                        <a class="dropdown-item" href="@Url.Action("ProductDetails", "AdminDashboard", new { id = product.ProductId })">
                                                             <i class="fas fa-eye me-2"></i> View details
                                                         </a>
                                                     </li>
