--- a/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Layout.cshtml
@@ -35,10 +35,15 @@
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="~/Scripts/jquery-3.6.0.min.js"><\/script>')</script>
+
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>window.bootstrap || document.write('<script src="~/Scripts/bootstrap.bundle.min.js"><\/script>')</script>
+
     <!-- Custom Scripts -->
-    <script src="~/Scripts/site.js"></script>
+    <script src="~/Scripts/site.js?v=@DateTime.Now.Ticks"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
